--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 *{
     box-sizing: border-box;
@@ -78,7 +78,8 @@ nav{
     }
 
     nav{
-        justify-content: space-between;   
+        justify-content: space-between;  
+        padding: 20px 15px;
     }
     .menu {
         display: flex;
@@ -114,26 +115,30 @@ nav{
 /*MAIN*/
 .frst-sec{
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 32%),
-     url('pics/nav-hatter.jpg') no-repeat center -230px;
-    min-height: 85vh;
+     url('pics/nav-hatter.jpg') no-repeat center center;
+    
+    min-height: 800px;
     background-size: cover;
     display: flex;
-    flex-flow: column wrap;
     justify-content: center;
-    align-items: flex-start;
-
+    align-items: center;
     border-radius: 0px 0px 80px 80px;
 }
 
-.frst-sec .content{
-
-    margin: 0 auto;
-    max-width: 600px;
- 
-
+.frst-sec .container{
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.frst-sec .content h2{
+.frst-sec .container .item{
+    flex-basis: 50%;
+    margin:0 0 0 30px;
+}
+
+.frst-sec .container .item h2{
+    word-wrap: break-word;
     line-height: 5.5rem;
     font-weight: 400;
     color: #8224E3;
@@ -143,12 +148,55 @@ nav{
     margin: 0 0 20px 0;
 }
 
-.frst-sec .content input{
+.frst-sec .container .item input{
     width: 100%;
     height: 36px;
     font-size: 1rem;
     padding: 0 12px;
     border: none;
+    outline: 0;
+}
+
+.frst-sec .container .item a{
+    display: block;
+    text-align: center;
+    width: 15rem;
+    height: 3rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: .8rem;
+    font-weight: 600;
+    line-height: 1;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    border: none;
+    color: white;
+    background: #8224E3;
+    margin-top: 50px;
+    padding: 18px 0;
+    border-radius: 3px;
+    transition: background-color .4s;
+}
+
+.frst-sec .container .item a:hover{
+    color: white;
+    background: black;
+}
+
+@media (max-width:400px){
+    .frst-sec .container .item input{
+        width: 70vw;
+    }
+    .frst-sec .container .item h2{
+        line-height: 4rem;
+        font-size: 4em;
+    }
+    .frst-sec{
+        align-items: flex-start;
+        margin-top: 80px;
+        min-height: 490px;
+        border-radius: 0px 0px 30px 30px;
+    }
 }
 
 /*MAIN END*/
