--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@ nav{
     display: none; 
     right: 30px;
     width: 41px;
-    height: 38px;
+    height: 36px;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.8rem;
     cursor: pointer;
     border: 1px solid #8224e3;;
     border-radius: 10%;
